# tuganire

./: .dockerignore  .env.example  .gitignore  .railwayignore  CLAUDE.md  Dockerfile  README.md  checkstyle.xml  docker-compose.yml  eclipse-formatter.xml  package-lock.json  package.json  pom.xml  run-dev.sh  spotbugs-exclude.xml
docs/: ARCHI.md  PRD.md  TTS-FINETUNE-PLAN.md  conversation-session-sequence.mmd
rules/: spring-boot-rules.mdc  spring-boot4-rules.mdc  thymeleaf-rules.mdc
tasks/: 01-backend-build-config.txt  02-python-mms-tts-server.txt  03-android-skeleton.txt  04-dtos-and-events.txt  05-flyway-and-jpa-entities.txt  06-i18n-messages.txt  07-provider-and-rule-interfaces.txt  08-redis-translation-cache.txt  09-feedback-service.txt  10-llm-providers-and-prompt.txt  11-french-normalizer-and-golden-dictionary.txt  12-kinyarwanda-postprocessor-rules.txt  13-tts-providers-and-service.txt  14-stt-provider-and-service.txt  15-security-cors-ratelimit.txt  16-translation-service-orchestrator.txt  17-conversation-service-audio-pipeline.txt  18-rest-controllers-and-exception-handling.txt  19-websocket-streaming-handler.txt  20-web-poc-deux-boutons.txt  21-android-conversation-screen.txt  22-tests-unit-and-integration.txt  23-web-poc-splitscreen-and-settings.txt  24-ci-cd-and-readme.txt  README.md  TEAM-PROMPT.txt
tts-finetune/: GUIDE-ENREGISTREMENT.md  README.md  domain_sentences_pastoral.txt  finetune_config.json  finetune_kaggle.ipynb  make_prompts.py  (+2 more)
tts-server/: .railwayignore  Dockerfile  README.md  pyproject.toml  requirements.txt  tts_server.py
(+376 files in other folders)
