[project]
name = "tuganire-tts-server"
version = "1.0.0"
description = "Tuganire MMS-TTS server — Kinyarwanda and French speech synthesis"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.32.0",
    "transformers==4.45.0",
    "torch==2.5.0",
    "scipy==1.14.0",
    "pydantic==2.9.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []
